@@ -35,7 +35,7 @@ public class ExceptionService {
     @ResponseBody
     @ExceptionHandler(ConstraintViolationException.class)
     @ResponseStatus(HttpStatus.BAD_REQUEST)
-    public ValidationErrorResponse onConstraintValidationException(
+    public Violation onConstraintValidationException(
             ConstraintViolationException e
     ) {
         final List<Violation> violations = e.getConstraintViolations().stream()
@@ -45,20 +45,20 @@ public class ExceptionService {
                                 violation.getMessage()
                         )
                 )
-                .collect(Collectors.toList());
-        return new ValidationErrorResponse(violations);
+                .toList();
+        return violations.getFirst();
     }
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
     @ResponseStatus(HttpStatus.BAD_REQUEST)
     @ResponseBody
-    public ValidationErrorResponse onMethodArgumentNotValidException(
+    public Violation onMethodArgumentNotValidException(
             MethodArgumentNotValidException e
     ) {
         final List<Violation> violations = e.getBindingResult().getFieldErrors().stream()
                 .map(error -> new Violation(error.getField(), error.getDefaultMessage()))
-                .collect(Collectors.toList());
-        return new ValidationErrorResponse(violations);
+                .toList();
+        return violations.getFirst();
     }
 
     @ExceptionHandler(value = DuplicationException.class)
